# shiwake-ai

./: .gitignore  CLAUDE.md  README.md  feature-map.html  hashes.js  index.html  master.js  master.json  package-lock.json  package.json  privacy.html  server.js  session.js  shiwake-ai_v2_2_0_仕様書.md  shiwake-ai_引き継ぎ_v1.3.1.md  shiwake-ai_引き継ぎ_v2_1_0.md  shiwake-ai_料金改定設計_v3_2.md  terms.html  tokushoho.html
pr-agent/: .env.example  .gitignore  PartA_data_and_classes.md  PartB_config_and_phase1.md  PartC_deploy_and_handoff.md  demo_account_setup_guide.md  main.py  patch_001_x_manual.md  pyproject.toml  render.yaml  shiwake-ai-PR-Agent_実装指示書_v2.md  shiwake-ai-PR-Agent_実装指示書_v2_骨組み.md  shiwake-ai-PR-Agent_実装指示書_v3_Phase4.md  shiwake-ai-PR-Agent_実装指示書_v3_骨組み.md
pr-agent/brain/: analyst.py  analytics.py  image_prompt.py  material_scout.py  panic.py  pattern_aggregator.py  pipeline.py  planner.py  publisher.py  sales_pipeline.py  trend_watcher.py  writer.py  zenn_writer.py
pr-agent/config/: characters.yaml  config_loader.py  panic_thresholds.yaml  personas.yaml  time_table.yaml  trend_sources.yaml  triggers.yaml  weapons.yaml
pr-agent/cowork_handoff/: README.md  image_generator.md  lead_finder.md  monthly_report.md  morning_review.md  note_post.md  outreach_writer.md  video_generator.md  visual_generation.md  x_manual_post.md  x_metrics_collect.md
pr-agent/dashboard/: UI_REDESIGN_HANDOFF.md  app.py
pr-agent/dashboard/templates/: _base.html  _macros.html  (+2 more)
pr-agent/memory/: schema.sql
pr-agent/notify/: discord.py
pr-agent/visuals/: ui_annotator.py  upload_assets.py
(+57 files in other folders)
