[project]
name = "pr-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "playwright>=1.59.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "supabase>=2.30.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
